build: integrate all script plugins into build.gradle